--- a/frontend/src/components/showRoom/showRoom.module.css
+++ b/frontend/src/components/showRoom/showRoom.module.css
@@ -12,3 +12,7 @@
     left:0px;
     z-index:1000;
 }
+
+.showRoom{
+    overflow-x: hidden;
+}
